<resources>
    <string name="app_name">Game Hub</string>
    <string name="rotate">Rotate</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="move_left">Move Left</string>
    <string name="move_right">Move Right</string>
    <string name="hold">Hold</string>
    <string name="return_main">Return</string>
    <string name="open_2048">2048</string>
    <string name="open_tetris">Tetris</string>
    <string name="open_pong">Pong</string>
    <string name="open_snake">Snake</string>
    <string name="pause">Pause</string>
</resources>