<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gamehub_blue">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_snake"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="50dp"
        android:background="@color/blue_dark"
        android:title="GameHub - Snake"
        android:titleTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <ImageButton
            android:id="@+id/btnReturnSnake"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/blue_dark"
            android:contentDescription="@string/return_main"
            android:src="@drawable/ic_action_name"
            android:layout_gravity="end" />

    </androidx.appcompat.widget.Toolbar>

    <be.kuleuven.gt.gamehub.SnakeView
        android:id="@+id/snakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintBottom_toTopOf="@id/buttonConstraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_snake"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonConstraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/snakeView">

        <ImageButton
            android:id="@+id/btnLeftSnake"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/move_left"
            android:src="@drawable/baseline_arrow_left_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnUpSnake"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnUpSnake"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/move_up"
            android:src="@drawable/baseline_arrow_drop_up_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnDownSnake"
            app:layout_constraintStart_toEndOf="@+id/btnLeftSnake"
            app:layout_constraintEnd_toStartOf="@id/btnRightSnake"/>

        <ImageButton
            android:id="@+id/btnDownSnake"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/move_down"
            android:src="@drawable/baseline_arrow_drop_down_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnRightSnake"
            app:layout_constraintStart_toEndOf="@+id/btnLeftSnake"
            app:layout_constraintTop_toBottomOf="@id/btnUpSnake" />

        <ImageButton
            android:id="@+id/btnRightSnake"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/move_right"
            android:src="@drawable/baseline_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnUpSnake"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/game_over_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/final_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Final Score: 0"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play Again" />

        <Button
            android:id="@+id/btn_back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Back to Hub" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtScoreSnake"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/snakeView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtHighScoreSnake"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_snake" />

    <TextView
        android:id="@+id/txtHighScoreSnake"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/snakeView"
        app:layout_constraintStart_toEndOf="@id/txtScoreSnake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_snake" />


</androidx.constraintlayout.widget.ConstraintLayout>