<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tetris_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gamehub_blue">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_tetris"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="50dp"
        android:background="@color/red"
        android:title="GameHub - Tetris"
        android:titleTextColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <ImageButton
            android:id="@+id/btnReturnTetris"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:contentDescription="@string/return_main"
            android:src="@drawable/ic_action_name"
            android:layout_gravity="end" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/tetris_preview_container"
        android:layout_width="82dp"
        android:layout_height="210dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Hold"
            android:textStyle="bold" />

        <be.kuleuven.gt.gamehub.TetrisPreviewView
            android:id="@+id/hold_preview"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="Next"
            android:textStyle="bold" />

        <be.kuleuven.gt.gamehub.TetrisPreviewView
            android:id="@+id/next_preview"
            android:layout_width="80dp"
            android:layout_height="80dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_over_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/final_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Final Score: 0"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play Again" />

        <Button
            android:id="@+id/btn_back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Back to Hub" />
    </LinearLayout>

    <!-- Tetris Game View -->
    <be.kuleuven.gt.gamehub.TetrisView
        android:id="@+id/tetris_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/buttonConstraint"
        app:layout_constraintEnd_toStartOf="@id/btnHold"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_tetris" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonConstraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tetris_view">

    <ImageButton
        android:id="@+id/btnLeftTetris"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/baseline_arrow_left_24"
        android:background="@color/teal_700"
        android:contentDescription="@string/move_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRotate"/>

    <ImageButton
        android:id="@+id/btnRotate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:background="@color/teal_200"
        android:contentDescription="@string/rotate"
        android:src="@drawable/baseline_360_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnDownTetris"
        app:layout_constraintStart_toEndOf="@+id/btnLeftTetris"
        app:layout_constraintEnd_toStartOf="@id/btnRightTetris"/>

    <ImageButton
        android:id="@+id/btnDownTetris"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/red"
        android:contentDescription="@string/move_down"
        android:src="@drawable/baseline_arrow_drop_down_24"
        app:layout_constraintTop_toBottomOf="@id/btnRotate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLeftTetris"
        app:layout_constraintEnd_toStartOf="@id/btnRightTetris"/>

    <ImageButton
        android:id="@+id/btnRightTetris"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/baseline_arrow_right_24"
        android:background="@color/yellow"
        android:contentDescription="@string/move_right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnRotate"
        app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtScoreTetris"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="400dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtHighScoreTetris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtHighScoreTetris"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="385dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnHold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnHold"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginTop="460dp"
        android:text="Hold"
        app:layout_constraintBottom_toTopOf="@+id/buttonConstraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
